Added popup x functionality

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -129,6 +129,7 @@ body {background-color: #232323;}
     background-color: transparent;
     border-style: none;
     outline-style: none;
+    text-decoration: none;
 }
 
 #description {
@@ -166,12 +167,51 @@ body {background-color: #232323;}
     box-shadow: -6px 6px #2A0A35 ;
 }
 
+.overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(5, 0, 0, 0.7);
+    transition: opacity 500ms;
+    visibility: hidden;
+    opacity: 0;
+ }
+    .overlay:target {
+        visibility: visible;
+        opacity: 1;
+    }
+
 .popup {
     margin: 70px auto;
     padding: 20px;
-    background: #fff;
+    background: #232323;
     border-radius: 5px;
     width: 30%;
     position: relative;
     transition: all 5s ease-in-out;
 }
+    .popup h2 {
+        margin-top: 0;
+        color: rgb(196, 215, 221);
+        font-family: Tahoma, Arial, sans-serif;
+    }
+
+    .popup .close {
+        position: absolute;
+        top: 20px;
+        right: 30px;
+        transition: all 200ms;
+        font-size: 30px;
+        font-weight: bold;
+        text-decoration: none;
+        color: rgb(196, 215, 221);
+    }
+    .popup .close:hover {
+        color: rgb(240, 240, 240);
+    }
+    .popup .content {
+        max-height: 30%;
+        overflow: auto;
+    }
