--- a/stylesheet.css
+++ b/stylesheet.css
@@ -52,18 +52,97 @@ body {background-color: #232323;}
     margin-left: 10px;
     margin-top: 40px;
     box-sizing:content-box;
-    box-shadow: -5px 5px 15px rgb(21, 30, 34);
+    box-shadow: 5px 5px 5px rgb(34, 21, 30);
     border-radius: 30px;
     display: inline-block;
     border-style: none;
     outline-style: none;
 }
+    #earnSpend:hover {
+        background-color: #582d58;
+    }
+    #earnSpend:active {
+        background-color: #582d58;
+        box-shadow: 1px 1px 1px rgb(34, 21, 30);
+    }
+
+#delEntry {
+    color: rgb(238, 227, 255); 
+    font-family: sans-serif; 
+    font-style: italic; 
+    font-size:30px;     
+    font-weight: 600; 
+    background-color: #3B263B;
+    padding: 10px;
+    padding-right: 25px;
+    padding-left: 20px;
+    max-width: fit-content;
+    margin: 5px;
+    margin-left: 30px;
+    margin-top: 40px;
+    margin-bottom:20px;
+    box-sizing:content-box;
+    box-shadow: 5px 5px 5px rgb(34, 21, 30);
+    border-radius: 30px;
+    display: inline-block;
+    border-style: none;
+    outline-style: none;
+    text-decoration: none;
+}
+    #delEntry:hover {
+        background-color: #582d58;
+    }
+    #delEntry:active {
+        background-color: #582d58;
+        box-shadow: 1px 1px 1px rgb(34, 21, 30);
+    }
+
+#cancelDel {
+    color: rgb(255, 255, 255); 
+    font-family: sans-serif; 
+    font-style: italic; 
+    font-size:30px;     
+    font-weight: 600; 
+    background-color: #383838;
+    padding: 10px;
+    padding-right: 25px;
+    padding-left: 20px;
+    max-width: fit-content;
+    margin: 5px;
+    margin-left: 30px;
+    margin-top: 40px;
+    margin-bottom:20px;
+    box-sizing:content-box;
+    box-shadow: 5px 5px 5px rgb(26, 26, 26);
+    border-radius: 30px;
+    display: inline-block;
+    border-style: none;
+    outline-style: none;
+    text-decoration: none;
+}
+    #cancelDel:hover {
+        background-color: #666666;
+    }
+    #cancelDel:active {
+        background-color: #666666;
+        box-shadow: 1px 1px 1px rgb(26, 26, 26);
+    }
 
 #title {
     color: rgb(138, 165, 193); 
     font-family: sans-serif; 
     font-style: italic; 
     font-size: 25px; 
+    font-weight: 900; 
+    margin-top: 35px;
+    margin-left: 35px;
+}
+
+#pTitle {
+    color: rgb(223, 235, 238); 
+    font-family: sans-serif; 
+    font-style: italic; 
+    font-size: 35px; 
     font-weight: 900; 
     margin-top: 35px;
     margin-left: 35px;
@@ -106,7 +185,7 @@ body {background-color: #232323;}
     font-size: 25px; 
     font-weight: 200; 
     margin-top: 10px;
-    margin-left: 10px;
+    margin-left: 35px;
     margin-right: 35px;
     margin-bottom: 0px;
     padding-right: 30px;
@@ -120,7 +199,7 @@ body {background-color: #232323;}
     font-size: 20px; 
     font-weight: 200; 
     margin-top: 00px;
-    margin-left: 10px;
+    margin-left: 35px;
     margin-right: 35px;
     margin-bottom: 0px;
     padding-right: 30px;
@@ -166,60 +245,3 @@ body {background-color: #232323;}
     background: #4B364F;
     box-shadow: -6px 6px #2A0A35 ;
 }
-
-.overlay {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(5, 0, 0, 0.7);
-    transition: opacity 500ms;
-    visibility: hidden;
-    opacity: 0;
- }
-    .overlay:target {
-        visibility: visible;
-        opacity: 1;
-    }
-
-.popup {
-    margin: 5000px auto;
-    padding: 4000px;
-    background: #232323;
-    border-radius: 5px;
-    width: 70%;
-    position: relative;
-    transition: all 5s ease-in-out;
-}
-    .popup h2 {
-        margin-top: 0;
-        color: rgb(196, 215, 221);
-        font-family: Tahoma, Arial, sans-serif;
-    }
-
-    .popup .close {
-        position: absolute;
-        top: 20px;
-        right: 30px;
-        transition: all 200ms;
-        font-size: 30px;
-        font-weight: bold;
-        text-decoration: none;
-        color: rgb(196, 215, 221);
-    }
-    .popup .close:hover {
-        color: rgb(240, 240, 240);
-    }
-    .popup .content {
-        color: rgb(196, 215, 221); 
-        font-family: sans-serif; 
-        font-style: italic; 
-        font-size: 25px; 
-        font-weight: 200; 
-        margin-top: 10px;
-        margin-left: 35px;
-        margin-right: 350px;
-        margin-bottom: 0px;
-        padding-right: 30px;
-    }
